# ck3raven

./: .gitignore  .pre-commit-config.yaml  BUG_REPORT_daemon_spawn_race_condition.md  LICENSE  Lensworld - Domain - Policy review outcomes.md  README.md  SUGGESTION_routing_table_exclusions.md  ck3raven.code-workspace  fix_wip_scope.py  lint_results.json  playset_manifest.json  pyproject.toml  pyrightconfig.json
.githooks/: README.md  pre-commit
.github/: AI_GUARDRAILS_AND_BEST_PRACTICES.md  COPILOT_LENS_COMPATCH.md  COPILOT_MODE_SWITCHER.md  COPILOT_RAVEN_DEV.md  PROJECT_STATUS.md  PROJECT_STATUS_2025_12_18.md  PROPOSED_TOOLS.md  copilot-instructions-old.md  copilot-instructions.md
artifacts/: B0_PROOF_BUNDLE.md
builder/: check_log_status.py  config.py  daemon.py  db_health.py  incremental.py  pending_refresh.py  test_block_logging.py  test_delta_methods.py  test_reconstruct_blocks.py
docs/: 00_ORIGINAL_CONCEPT.md  01_PARSER_AND_MERGER_CONCEPTS.md  02_BUILDER_DESIGN_CURRENT_STATE.md  02_EXISTING_TOOLS_AND_FEASIBILITY.md  03_PARSER_LANDSCAPE.md  03_TRADITION_RESOLVER_V0_DESIGN.md  04_VIRTUAL_MERGE_EXPLAINED.md  05_ACCURATE_MERGE_OVERRIDE_RULES.md  06_CONTAINER_MERGE_OVERRIDE_TABLE.md  07_TEST_MOD_AND_LOGGING_COMPATCH.md  08_MAP_MOD_CONVERSION_AGENT.md  ARCHITECTURE.md  ARCHITECTURE_TODO_JAN31.md  Agent Directive_ Reply System Consolidation.md  BANCHECK_RESULTS.txt  BANNED_TERM_SCAN.txt  BLOCK_LOGGING_DESIGN_v1.0.md  BLOCK_LOGGING_DESIGN_v1.1.md  BUG_HARDCODED_PATHS.md  CANONICAL CONTRACT SYSTEM v2.md  CANONICAL CONTRACT SYSTEM.md  CANONICAL REFACTOR INSTRUCTIONS.md  CANONICAL_ARCHITECTURE.md  CANONICAL_CONTRACT_LAW.md  CANONICAL_LOGS.md  CHAT_JOURNALING_V2.md  CHAT_PARTICIPANT.md  CHAT_PARTICIPANT_V1_IMPLEMENTATION_PLAN.md  (+60 more)
(+644 files in other folders)
